a4/extra_feedback/apr6-1210/feedback.txt
=== make output (start) ===
gcc -DSERVER_PORT=30286 -g -Wall -Werror -fsanitize=address -c chat_server.c
gcc -DSERVER_PORT=30286 -g -Wall -Werror -fsanitize=address -c socket.c
gcc -DSERVER_PORT=30286 -g -Wall -Werror -fsanitize=address -c chat_helpers.c
gcc -DSERVER_PORT=30286 -g -Wall -Werror -fsanitize=address -o chat_server chat_server.o socket.o chat_helpers.o
gcc -DSERVER_PORT=30286 -g -Wall -Werror -fsanitize=address -c chat_client.c
chat_client.c: In function ‘main’:
chat_client.c:408:25: error: missing sentinel in function call [-Werror=format=]
                         execlp("catimg", "catimg", "-w80", fifo_name);
                         ^~~~~~
cc1: all warnings being treated as errors
Makefile:13: recipe for target 'chat_client.o' failed
make: *** [chat_client.o] Error 1
=== make output (end) ===
=== checking some basic requirements ===
 * Your chat_client.c failed to compile
